Style Devise User views

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -13,6 +13,7 @@
 @import "components/post_comment_meta";
 @import "components/sidebar";
 @import "components/user";
+@import "components/field";
 
 // Layouts
 @import "layouts/container";
