--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,56 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<main class="container">
+  <div class="header">
+    <h1>Sign up</h1>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <%= f.fields_for :profile do |profile_form| %>
-    <%= profile_form.label :name, "Name" %>
-    <%= profile_form.text_field :name, placeholder: "Jane Doe" %>
   
-    <%= profile_form.label :location, "Location" %>
-    <%= profile_form.text_field :location, placeholder: "London, UK" %>
-
-    <%= profile_form.label :birthday, "Birthday" %>
-    <%= profile_form.date_field :birthday %>
-    
-    <%= profile_form.label :picture, "Add your profile picture *" %>
-    <%= profile_form.file_field :picture %>
-    <p>* Picture must be in a square format or else it will be cropped</p>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+  
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+  
+    <%= f.fields_for :profile do |profile_form| %>
+      <div class="field">
+        <%= profile_form.label :name, "Name" %><br />
+        <%= profile_form.text_field :name, placeholder: "Jane Doe" %>
+      </div>
+  
+      <div class="field">
+        <%= profile_form.label :location, "Location" %><br />
+        <%= profile_form.text_field :location, placeholder: "London, UK" %>
+      </div>
+  
+      <div class="field">
+        <%= profile_form.label :birthday, "Birthday" %><br />
+        <%= profile_form.date_field :birthday %>
+      </div>
+  
+      <div class="field">
+        <%= profile_form.label :picture, "Add your profile picture *" %><br />
+        <%= profile_form.file_field :picture %>
+        <p>* Picture must be in a square format or else it will be cropped</p>
+      </div>
+    <% end %>
+  
+    <div class="actions">
+      <%= f.submit "Sign up", class: "btn btn--primary" %>
+    </div>
   <% end %>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  
+  <%= render "devise/shared/links" %>
+</main>
