--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,18 +1,26 @@
 <%= form_with model: profile do |form| %>
   <%= form_error_notification(profile) %>
 
-  <%= form.label :name, "Name" %>
-  <%= form.text_field :name, placeholder: "Jane Doe" %>
+  <div class="field">
+    <%= form.label :name, "Name" %><br />
+    <%= form.text_field :name, placeholder: "Jane Doe" %>
+  </div>
 
-  <%= form.label :location, "Location" %>
-  <%= form.text_field :location, placeholder: "London, UK" %>
+  <div class="field">
+    <%= form.label :location, "Location" %><br />
+    <%= form.text_field :location, placeholder: "London, UK" %>
+  </div>
 
-  <%= form.label :birthday, "Birthday" %>
-  <%= form.date_field :birthday %>
+  <div class="field">
+    <%= form.label :birthday, "Birthday" %><br />
+    <%= form.date_field :birthday %>
+  </div>
 
-  <%= form.label :picture, "Change your profile picture *" %>
-  <%= form.file_field :picture %>
-  <p>* Picture must be in a square format or else it will be cropped</p>
+  <div class="field">
+    <%= form.label :picture, "Change your profile picture *" %><br />
+    <%= form.file_field :picture %>
+    <p>* Picture must be in a square format or else it will be cropped</p>
+  </div>
   
   <%= form.submit "Save", class: "btn btn--secondary" %>
 
