--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -14,6 +14,8 @@
 @import "components/sidebar";
 @import "components/user";
 @import "components/field";
+@import "components/error_message";
+@import "components/flash";
 
 // Layouts
 @import "layouts/container";
