--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
   
   <% if current_user %>
     <div class="navbar__links">
-      <%= render "shared/notifications" %>
+      <%= render "layouts/notifications" %>
       <%= link_to "Find New Friends",
                   users_path,
                   class: "btn btn--light" %>
