Replace like button by icon and add title

--- a/app/assets/stylesheets/components/_like.scss
+++ b/app/assets/stylesheets/components/_like.scss
@@ -4,6 +4,10 @@
   gap: var(--space-xs);
   padding: var(--space-xxs) 0;
 
+  &__icon {
+    width: var(--space-m);
+  }
+
   &__count {
     font-style: italic;
   }
