--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,21 +1,21 @@
 <div class="like">
-  <div class="like__btn">
-    <% if current_user.liked_posts.include?(post) %>
-      <% like_id = current_user.likes.select { |likes| likes.post_id == post.id } %>
-      <%= button_to "Liked",
-          like_path(like_id),
-          method: :delete,
-          class: "btn btn--secondary btn--small"
-      %>
-    <% elsif post.user != current_user %>
-      <%= button_to "Like",
-          likes_path,
-          params: { "like[post_id]": post.id, "like[user_id]": current_user.id },
-          method: :post,
-          class: "btn btn--light btn--small"
-      %>
-    <% end %>
-  </div>
+  <% if current_user.liked_posts.include?(post) %>
+    <% like_id = current_user.likes.select { |likes| likes.post_id == post.id } %>
+    <%= button_to image_tag("liked.png", class: "like__icon"),
+        like_path(like_id),
+        method: :delete,
+        class: "btn btn--icon",
+        title: "Unlike"
+    %>
+  <% elsif post.user != current_user %>
+    <%= button_to image_tag("like.png", class: "like__icon"),
+        likes_path,
+        params: { "like[post_id]": post.id, "like[user_id]": current_user.id },
+        method: :post,
+        class: "btn btn--icon",
+        title: "Like"
+    %>
+  <% end %>
   
   <div class="like__count">
     <% if post.liked_by.any? %>
