Allow deletion of post by author

--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -16,4 +16,14 @@
     display: flex;
     gap: var(--space-xs);
   }
+
+  &__header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__delete-icon {
+    width: var(--space-m);
+  }
 }
