--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,8 @@
     <h1>Sign up</h1>
   </div>
   
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+  <%= nested_form_for([resource_name, resource.with_profile], url: registration_path(resource_name), data: { turbo: false }) do |f| %>
+    <%= form_error_notification(resource) %>
   
     <div class="field">
       <%= f.label :email %><br />
