--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -4,7 +4,7 @@
   </div>
   
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, data: { turbo: false } }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_error_notification(resource) %>
     <%= f.hidden_field :reset_password_token %>
   
     <div class="field">
