--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   </div>
   
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, data: { turbo: false } }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_error_notification(resource) %>
   
     <div class="field">
       <%= f.label :email %><br />
