Modify styling and post date format

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,7 +10,7 @@
   &__home {
     font-weight: bold;
     font-size: var(--font-size-xxl);
-    color: var(--color-text-header);
+    color: var(--color-primary);
   }
 
   &__links {
