--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -6,7 +6,7 @@
   &__profile {
     h2 {
       text-align: center;
-      margin-bottom: var(--space-xs);
+      margin: var(--space-xs) 0;
     }
     p {
       font-size: var(--font-size-s);
