--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -11,6 +11,13 @@
     p {
       font-size: var(--font-size-s);
     }
+    .profile-img {
+      @media (max-width: 50rem) {
+        width: 100px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
   }
 
   &__friends {
