--- a/app/assets/stylesheets/components/_user.scss
+++ b/app/assets/stylesheets/components/_user.scss
@@ -4,7 +4,13 @@
   gap: var(--space-s);
   margin-bottom: var(--space-s);
 
-  img {
+  .profile-img {
     width: 100px;
+
+    @media (max-width: 50rem) {
+      min-width: 60px;
+      width: 20%;
+      max-width: 100px;
+    }
   }
 }
