--- a/app/assets/stylesheets/layouts/_container.scss
+++ b/app/assets/stylesheets/layouts/_container.scss
@@ -1,13 +1,14 @@
 .container {
-  width: 100%;
-  padding-right: var(--space-xs);
-  padding-left: var(--space-xs);
+  max-width: 60rem;
+  padding-right: var(--space-m);
+  padding-left: var(--space-m);
   margin-left: auto;
   margin-right: auto;
 
-  @media (min-width: 50rem) {
-    padding-right: var(--space-m);
-    padding-left: var(--space-m);
-    max-width: 60rem;
+  @media (max-width: 50rem) {
+    width: 100%;
+    padding-right: var(--space-xs);
+    padding-left: var(--space-xs);
+    font-size: var(--font-size-s);
   }
 }
