--- a/app/assets/stylesheets/layouts/_user-show.scss
+++ b/app/assets/stylesheets/layouts/_user-show.scss
@@ -5,4 +5,8 @@
 
   margin-top: var(--space-m);
   margin-bottom: var(--space-l);
+
+  @media (max-width: 50rem) {
+    grid-template-columns: 1fr;
+  }
 }
